--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "axios": "^1.8.4",
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -24,7 +25,6 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-svg-uri": "^1.2.3",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
